add loaded devices to loading status, show in chat
